WLPlayer.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Nothing to build in platform 'WLPlayer_system'

23:18:30 **** Incremental Build of configuration Debug for project WLPlayer_Software ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/gpio.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/gpio.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -ID:/ofcollage/EES_exp/extral/lab_9_player/WLPlayer/WLPlayer.sdk/WLPlayer_system/export/WLPlayer_system/sw/WLPlayer_system/standalone_ps7_cortexa9_0/bspinclude/include -MMD -MP -MF"src/gpio.d" -MT"src/gpio.o" -o "src/gpio.o" "../src/gpio.c"
In file included from ../src/defs.h:19,
                 from ../src/gpio.h:3,
                 from ../src/gpio.c:1:
D:/ofcollage/EES_exp/extral/lab_9_player/WLPlayer/WLPlayer.sdk/WLPlayer_system/export/WLPlayer_system/sw/WLPlayer_system/standalone_ps7_cortexa9_0/bspinclude/include/xbasic_types.h:102:2: warning: #warning The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert. [-Wcpp]
  102 | #warning  The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert.
      |  ^~~~~~~
D:/ofcollage/EES_exp/extral/lab_9_player/WLPlayer/WLPlayer.sdk/WLPlayer_system/export/WLPlayer_system/sw/WLPlayer_system/standalone_ps7_cortexa9_0/bspinclude/include/xbasic_types.h:103:2: warning: #warning Please refer the Standalone BSP UG647 for further details [-Wcpp]
  103 | #warning  Please refer the Standalone BSP UG647 for further details
      |  ^~~~~~~
../src/gpio.c: In function 'GPIOInterruptInit':
../src/gpio.c:43:4: error: cannot convert to a pointer type
   43 |    (Xil_ExceptionHandler)GPIOInterruptHandler,(void*)Gpio);
      |    ^
make[1]: *** [src/subdir.mk:32: src/gpio.o] Error 1
make: *** [makefile:34: all] Error 2
